--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react": "18.2.0-next-82c64e1a4-20220520",
     "react-dom": "18.2.0-next-82c64e1a4-20220520",
     "spin-delay": "^1.1.0",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
